--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<script type="text/javascript" src="app.js"></script>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
-	<title>Document</title>
+	<title>Dan's Fizzbuzz</title>
 </head>
 <body>
 	<h1>FIZZBUZZ</h1>
