done except for reset

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 	<script type="text/javascript" src="app.js"></script>
 	<title>Dan's Fizzbuzz</title>
 </head>
-<body>
-	<h1>FIZZBUZZ</h1>
-	<form>
-		<input id="enternumber" type="number" name="quantity" min="1" max="200"><br>
+<body style="text-align: center">
+	<h1 style="margin-top: 3em">FIZZBUZZ</h1>
+	<div>
+		<input id="enternumber" type="number" name="quantity" min="1" max="200">
 		<input id="submitbutton" type="submit">
-	</form>
-	<div id="output">
-		
+	</div>
+	<div>
+		<ul id="output" style="list-style-type: none">
+			
+		</ul>
 	</div>
 </body>
 </html>
