--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body style="text-align: center">
 	<h1 style="margin-top: 3em">FIZZBUZZ</h1>
-	<div>
-		<input id="enternumber" type="number" name="quantity" min="1" max="200">
+	<form id="userinput">
+		<input id="enternumber" type="number" name="quantity" min="1" max="200" required>
 		<input id="submitbutton" type="submit">
-	</div>
+	</form>
 	<div>
 		<ul id="output" style="list-style-type: none">
 			
